mess solved- cshe refresh- ctrl-shift-r

--- a/firstTheme/style.css
+++ b/firstTheme/style.css
@@ -15,7 +15,7 @@ body {
 
 .full-width .container ul li {
   display: inline-block;
-  color: #ffffff;
+  color: red;
   margin-left: 19px;
   text-transform: uppercase;
   font-size: 12px;
@@ -37,7 +37,7 @@ body {
 }
 
 .container .title h1 {
-  font-family: sans-serif;
+  /*font-family: sans-serif;*/
   font-size: 55px;
   letter-spacing: 5px;
 }
@@ -54,7 +54,7 @@ body {
 
 .container .sidebar {
   text-align: left;
-  background-color: red;
+  background-color: #ffffff;
   display: inline-block;
   width: 23%;
   float: right;
@@ -63,8 +63,11 @@ body {
 
 .container .wrap{
   text-align: left;
+
 }
 
 .search{
   border: 1px solid grey;
+padding: 10px;
+
 }
